@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: January 6, 2009</p>
+      <p>Last Updated: February 6, 2009</p>
     </td>
   </tr>
 </table>
@@ -1105,7 +1105,7 @@ m68k, m68hc11, m68hc12, and SuperH ports.</blockquote>
       </p>
     </ul>
     <p>
-      At present, on the Zilog Z16F port uses a native Windows toolchain
+      At present, only the Zilog Z16F, z8Encore, and ez80Acclaim ports use a native Windows toolchain
       (the Zilog ZDS-II toolchain).
     </p.
   </td>
@@ -1297,6 +1297,7 @@ nuttx-0.4.1 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Updated all ARM Make.def files to work with gcc 2.4.2 (However, there are
 	  still some build issues associated with that toolchain in use of arm-elf-objcopy
 	  -- see the TODO.txt list for details)
+	* Fix problems with Z16F compilation introduced with recent changes.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
